--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="copy-ja">デザインで人を笑顔にする会社</div>
           <div class="copy-en">DIGSMILE INC.</div>
           <div class="main-copy">
-            DESIGN<br>FOR<br>SMILE.
+            Design<br>For<br>Happiness.
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
           まずはお気軽にご連絡ください。担当者から改めて返信いたします。</p>
           <a href="./contact/contact.html" class="btn">READ MORE</a>
         </div>
-        <div class="contact-img-wrapper"><img src="./img/recruit-img2x.jpg" alt="屋外での集合写真" class="contact-img"></div>
+        <div class="contact-img-wrapper"><img src="./img/pexels-sora-shimazaki-5673489.jpg" alt="屋外での集合写真" class="contact-img"></div>
       </div>
     </section>
     <!-- contact -->
