--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DIGSMILE inc. | contact</title>
+  <title>DIGSMILE inc. | デザインで人を笑顔にする会社</title>
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel = "preconnect" href = "https://fonts.gstatic.com">
   <link href = "https://fonts.googleapis.com/css2？family = Montserrat：wght @ 700; 800＆family = Noto + Sans + JP＆ display = swap "rel =" stylesheet ">
